# auto_versioning

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pytest.yaml
tests/: test_example.py
