[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_versioning"
version = "0.0.1"
authors = [
  { name="LMST" },
]
description = "A small auto versioning package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lmst95/auto_versioning"
"Bug Tracker" = "https://github.com/lmst95/auto_versioning/issues"

# pyproject.toml
[tool.pytest.ini_options]
pythonpath = "src"
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--import-mode=importlib",
    "--cov=src"
]
testpaths = [
    "tests",
]